# reina_s_kawaii_move_assist

./: .gitignore  .gitmodules  Cargo.toml  README.md  out.txt
kma_core/: Cargo.toml
kma_core/src/: main.rs
open_vr_kma_driver/: Cargo.toml  build.rs
open_vr_kma_driver/OpenVRDriverTemplate/00kawaiimoveassist/: driver.vrdrivermanifest
open_vr_kma_driver/OpenVRDriverTemplate/00kawaiimoveassist/resources/settings/: default.vrsettings
open_vr_kma_driver/cpp/: KMADriver.cpp  KMADriver.h  bindings.h
open_vr_kma_driver/cpp/OVR-SC/: Hooking.h  InterfaceHookInjector.cpp  InterfaceHookInjector.h
open_vr_kma_driver/src/: lib.rs
