[package]
name = "open_vr_kma_driver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
cgmath = "0.18.0"
once_cell = "1.20.2"


[build-dependencies]
bindgen = "0.71.1"
cbindgen = "0.27.0"
cc = "1.2.4"


